# laiangai

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.yml  项目优化建议.md
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 32cc63cb9f63_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/v1/: auth.py  compare.py  documents.py  reports.py  settings.py
backend/app/core/: audit.py  db.py  exceptions.py  milvus_client.py  minio_client.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  compare_task.py  document.py  report.py  user.py
backend/app/repositories/: compare_repo.py  document_repo.py  user_repo.py
backend/app/schemas/: compare.py  response.py
backend/app/services/: desensitizer.py  llm_client.py  report_gen.py  vectorizer.py
backend/app/services/compare/: char_diff.py  risk_detector.py  semantic_diff.py
backend/app/services/parser/: base.py  dispatcher.py  docx_parser.py  ocr_parser.py  pdf_parser.py  txt_parser.py
backend/app/services/prompts/: diff_analysis.txt
backend/app/tasks/: compare_task.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_contract.docx
backend/tests/integration/: conftest.py  test_document_api.py
backend/tests/unit/: test_audit.py  test_char_diff.py  test_desensitizer.py  test_llm_client.py  test_report_gen.py  test_risk_detector.py  test_semantic_diff.py  test_vectorizer.py
docs/: 一期详细开发文档.md  系统启动手册.md  莱钢集团AI文档比对解决方案 .md  通义千问注册要求.md
frontend/: .dockerignore  Dockerfile  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  (+1 more)
(+19 files in other folders)
