[project]
name = "lgsteel-doc-compare-backend"
version = "1.0.0"
description = "莱钢集团 AI 文档比对系统后端"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # 数据库
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    # 缓存
    "redis[hiredis]>=5.0.0",
    # 对象存储
    "minio>=7.2.0",
    # 向量数据库
    "pymilvus>=2.4.0",
    # 配置
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # 文档解析
    "python-docx>=1.1.0",
    "pdfplumber>=0.10.0",
    "tika>=2.6.0",
    "aiofiles>=23.2.0",
    "chardet>=5.2.0",
    "bcrypt>=4.0.0",
    # 向量模型（CPU 推理）
    "numpy>=1.24,<2.0",           # NumPy 2.0+ 要求 x86-64-v2 CPU 指令集，宿主机不支持
    "FlagEmbedding>=1.2.0,<2.0",
    "transformers>=4.36.0,<5.0",
    "torch>=2.2.0",
    # 比对算法
    "diff-match-patch>=20230430",
    # LLM API SDK
    "dashscope>=1.19.0",
    "openai>=1.30.0",
    # 报告生成
    "reportlab>=4.1.0",
    "jinja2>=3.1.0",
    # 安全
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # 工具
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "aiosqlite>=0.22.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "S", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
